# SemanaTec_Vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  main.cpp
include/: ConvolutionHelper.hpp
python/: PlateDetector.py
src/: ConvolutionHelper.cpp
